post action added to jenkins file

--- a/connect_to_k8s_from_jenkins/jenkinsfile
+++ b/connect_to_k8s_from_jenkins/jenkinsfile
@@ -21,16 +21,20 @@ pipeline {
 	}
 	post{
 		failure {
-			mail bcc: '', body: '''Hi Team,
+			emailext body: '''Hi Team,
 
-		Please check below job has got failed.
-		$PROJECT_NAME''', cc: '', from: '', replyTo: '', subject: 'Job Got failed for the build $BUILD_NUMBER', to: 'chaitanyagolhar35@gmail.com'
+Please check below job has got failed.
+$PROJECT_NAME
+URL for the job is $BUILD_URL
+Thanks''', subject: 'Build has been Failed for the $PROJECT_NAME - $BUILD_NUMBER ', to: 'chaitanyagolhar0305@gmail.com', from: 'chaitanyagolhar35@gmail.com'
 		}
 		success{
-			mail bcc: '', body: '''Hi Team,
+			emailext body: '''Hi Team,
 
-		Below job has been succeed.
-		$PROJECT_NAME''', cc: '', from: '', replyTo: '', subject: 'Job Got succeed for the build $BUILD_NUMBER', to: 'chaitanyagolhar35@gmail.com'
+Below job has got succeed.
+$PROJECT_NAME
+URL for the job is $BUILD_URL
+Thanks''', subject: 'Build has been succeed for the $PROJECT_NAME - $BUILD_NUMBER ', to: 'chaitanyagolhar0305@gmail.com', from: 'chaitanyagolhar35@gmail.com'
 		}
 	}
 }
